--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "postcss": "^8",
     "prisma": "^6.4.0",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "eslintIgnore": [
+    "**/node_modules/sonner/**"
+  ]
 }
